--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 #background-overlay {
   background-image: url("assets/images/background-pattern-desktop.svg");
+  background-size: cover;
   width: 100%;
   height: 320px;
   display: block;
@@ -40,7 +41,6 @@ body {
   text-align: left;
   border: none;
   outline: none;
-  transition: 0.4s;
   display: flex;
   justify-content: space-between;
   align-content: center;
@@ -98,4 +98,17 @@ hr {
 .b-border-radius {
   height: 10px;
   width: 100%;
+}
+
+@media only screen and (max-width: 430px) {
+  #background-overlay {
+    background-image: url("assets/images/background-pattern-mobile.svg");
+    background-size: cover;
+  }
+  .card {
+    width: 327px;
+  }
+  .accordion {
+    font-size: 16px;
+  }
 }
