--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: WorkSans;
-  src: url("/assets/fonts/WorkSans-VariableFont_wght.ttf");
-}
-@font-face {
-  font-family: "WorkSans Italic";
-  src: url("/assets/fonts/WorkSans-Italic-VariableFont_wght.ttf");
-}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,7 +5,7 @@
 }
 body {
   background-color: #f8eeff;
-  font-family: WorkSans;
+  font-family: "Work Sans";
 }
 #background-overlay {
   background-image: url("assets/images/background-pattern-desktop.svg");
