--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header {
   padding-left: 40px;
   padding-bottom: 32px;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 900;
   border-radius: 15px 15px 0 0;
 }
 
